--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <body>
     <div id="app">
       <!-- todo -->
+      <div id="map" style="height: 80vh; width: 100%"></div>
+      <section id="inventory">
+      <h2 id="inventory-total">0 GeoCache Coins</h2>
+      </section>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
