--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <!-- todo -->
       <div id="map" style="height: 80vh; width: 100%"></div>
       <section id="inventory">
-      <h2 id="inventory-total">0 GeoCache Coins</h2>
+      <h1 id="inventory-total">0 GeoCache Coins</h1>
+      <h2 id="held-coins"></h2>
       </section>
     </div>
     <script type="module" src="/src/main.ts"></script>
