--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <div id="app">
       <!-- todo -->
       <div id="map" style="height: 80vh; width: 100%"></div>
+      <div id="controls">
+        <button id="move-north">⬆️</button>
+        <button id="move-west">⬅️</button>
+        <button id="move-east">➡️</button>
+        <button id="move-south">⬇️</button>
+      </div>
       <section id="inventory">
       <h1 id="inventory-total">0 GeoCache Coins</h1>
       <h2 id="held-coins"></h2>
