added geolocation button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="move-west">⬅️</button>
         <button id="move-east">➡️</button>
         <button id="move-south">⬇️</button>
+        <button id="toggle-geolocation">🌐</button>
       </div>
       <section id="inventory">
       <h1 id="inventory-total">0 GeoCache Coins</h1>
