--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="move-east">➡️</button>
         <button id="move-south">⬇️</button>
         <button id="toggle-geolocation">🌐</button>
+        <button id="reset-button">🚮</button>
       </div>
       <section id="inventory">
       <h1 id="inventory-total">0 GeoCache Coins</h1>
